[package]
name = "snob"
version = "0.1.0"
authors = ["Mica White <botahamec@outlook.com>"]
edition = "2021"
rust-version = "1.66.1"
description = "String analysis inspired by the Icon programming language"
documentation = "https://docs.rs/snob"
readme = "README.md"
repository = "https://github.com/botahamec/snob/"
license = "0BSD"
keywords = ["parser"]
categories = ["parsing"]
include = ["src/**/*", "LICENSE.md", "README.md"]

[package.metadata]
msrv = "1.66.1"
